[package]
name = "wasm-excel"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.26.1"
chrono = "0.4.39"
rust_xlsxwriter = {version = "0.88.0", features = ["wasm"]}

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
